--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -29,27 +29,42 @@
           </div>
         </div>
 
-
+      <div id="seccions">
         <div id="principal">
+
           <div id="presentacio" class="esquerra estret">
 
           </div>
 
           <div id="amistats" class="esquerra">
-
           </div>
 
           <div id="fotos" class="esquerra">
-
           </div>
 
           <div id="surprise" class="esquerra">
-
           </div>
 
           <div id="idiomas" class="esquerra">
-
           </div>
+
+        </div>
+
+          <div class="dreta">
+          </div>
+
+          <div class="dreta">
+          </div>
+
+          <div class="dreta">
+          </div>
+
+          <div class="dreta">
+          </div>
+
+          <div class="dreta">
+          </div>
+
         </div>
     </div>
   </body>
