--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -29,17 +29,47 @@
           </div>
         </div>
 
-      <div id="seccions">
+
         <div id="principal">
-
+          <aside id="seccions">
           <div id="presentacio" class="esquerra estret">
-
+            <h3>Presentació</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <ul>
+              <li>Va estudiar a IES Esteve Terrades</li>
+              <li>Viu a Barcelona</li>
+              <li>De Barcelona</li>
+              <li>Ve de Ghana</li>
+            </ul>
           </div>
 
           <div id="amistats" class="esquerra">
+            <h3>Amistats</h3>
+              <ul>
+                <li>Adrian Carranco</li>
+                <li>Pau Granada</li>
+                <li>Mario Muñoz</li>
+                <li>Steven Garzon</li>
+                <li>Aleix Brianso</li>
+                <li>Nacho Prados</li>
+                <li>Sandra Perez</li>
+                <li>Sara Pedrol</li>
+                <li>Laura Alarxon</li>
+              </ul>
           </div>
 
           <div id="fotos" class="esquerra">
+            <h3>Fotos</h3>
+              <ul>
+                <li>Foto 1</li>
+                <li>Foto 2</li>
+                <li>Foto 3</li>
+                <li>Foto 4</li>
+                <li>Foto 5</li>
+                <li>Foto 6</li>
+                <li>Foto 7</li>
+                <li>Foto 8</li>
+                <li>Foto 9</li>
+              </ul>
           </div>
 
           <div id="surprise" class="esquerra">
@@ -47,11 +77,7 @@
 
           <div id="idiomas" class="esquerra">
           </div>
-
-        </div>
-
-          <div class="dreta">
-          </div>
+        </aside>
 
           <div class="dreta">
           </div>
@@ -65,7 +91,9 @@
           <div class="dreta">
           </div>
 
-        </div>
+          <div class="dreta">
+          </div>
+      </div>
     </div>
   </body>
 </html>
