--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>El meu perfil</title>
+    <title>I Stay Flexing</title>
     <link rel="stylesheet" type="text/css" href="facebook_w.css">
   </head>
   <body>
@@ -11,6 +11,7 @@
 
     <div id="contingut">
         <div id="fotoperfil">
+          <img src="img/photo.png" />
         </div>
         <div id="cap">
           <div id="vacio">
@@ -45,15 +46,18 @@
           <div id="amistats" class="esquerra">
             <h3>Amistats</h3>
               <ul>
-                <li>Adrian Carranco</li>
-                <li>Pau Granada</li>
-                <li>Mario Muñoz</li>
-                <li>Steven Garzon</li>
-                <li>Aleix Brianso</li>
-                <li>Nacho Prados</li>
-                <li>Sandra Perez</li>
-                <li>Sara Pedrol</li>
-                <li>Laura Alarxon</li>
+                <li id="AC"><a href="https://acarranco2019crn.github.io/m08/s2m8uf0104carranco/s2m8uf0104carranco.html">Adrian Carranco</a></li>
+                <li id="MM"><a href="https://mmunozp2019crn.github.io/M08/s2m8uf104_munoz/index.html">Mario Muñoz</a></li>
+                <li id="SP"><a href="https://sperez2019crn.github.io/M08/s2m8uf104_sperez/facebook.html">Sandra Perez</a></li>
+                <li id="NC"><a href="https://nchia2019crn.github.io/M08/s2m8uf104_chia/facebook.html">Noelia Chia</a></li>
+                <li id="OP"><a href="https://oparicio2019crn.github.io/M08/UF1/s2m8uf104_oparicio/s2m8uf104_oparicio_web.html">Oriol Paricio</a></li>
+                <li id="YR"><a href="https://yromero2019crn.github.io/M08/UF1/s2m8uf104_facebook/s2m8uf0104_romero.html">Yaiza Romero</a></li>
+                <li id="AG"><a href="https://agarcia2019crn.github.io/M08/s2m8uf104_garciaa/facebook.html">Aarón Garcia</a></li>
+                <li id="GB"><a href="https://gbonsoms2019crn.github.io/M08/s2m8uf104_facebook/facebook.html">Gemma Bonsoms</a></li>
+                <li id="SG"><a href="https://vherrero2019crn.github.io/M08/s2m8uf104facebook/facebook.html">Victor Herrero</a></li>
+                <li id="VH"><a href="https://sgarzon2019crn.github.io/M08/s2m8uf104_facebook/index_w.html">Steven Garzon</a></li>
+                <li id="SF"><a href="https://sfernandez2019crn.github.io/M08/s2m8uf104_fernandez/facebook.html"></a>Siria Fernandez</li>
+                <li id="NP"><a href="https://iprados2019crn.github.io/M08/s2m8uf104_iprados/facebook.html">Nacho Prados</a></li>
               </ul>
           </div>
 
