--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -34,7 +34,11 @@
         <div id="principal">
           <aside id="seccions">
           <div id="presentacio" class="esquerra estret">
-            <h3>Presentació</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>Presentació</h3><p>Hi! My name is (what?)
+                Excuse me, (my name is) (who? My name is)
+                Slim Shady
+                Can I get the attention of the class (huh my name is, what my name is)
+                For one second My name is (My name is Slim Shady)</p>
             <ul>
               <li class="estudis">Va estudiar a IES Esteve Terrades</li>
               <li class="casa">Viu a Barcelona</li>
@@ -56,7 +60,7 @@
                 <li id="GB"><a href="https://gbonsoms2019crn.github.io/M08/s2m8uf104_facebook/facebook.html">Gemma Bonsoms</a></li>
                 <li id="SG"><a href="https://vherrero2019crn.github.io/M08/s2m8uf104facebook/facebook.html">Victor Herrero</a></li>
                 <li id="VH"><a href="https://sgarzon2019crn.github.io/M08/s2m8uf104_facebook/index_w.html">Steven Garzon</a></li>
-                <li id="SF"><a href="https://sfernandez2019crn.github.io/M08/s2m8uf104_fernandez/facebook.html"></a>Siria Fernandez</li>
+                <li id="SF"><a href="https://sfernandez2019crn.github.io/M08/s2m8uf104_fernandez/facebook.html">Siria Fernandez</a></li>
                 <li id="NP"><a href="https://iprados2019crn.github.io/M08/s2m8uf104_iprados/facebook.html">Nacho Prados</a></li>
               </ul>
           </div>
