--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -74,20 +74,42 @@
                 <li>Foto 4</li>
                 <li>Foto 5</li>
                 <li>Foto 6</li>
-                <li>Foto 7</li>
-                <li>Foto 8</li>
-                <li>Foto 9</li>
               </ul>
           </div>
 
           <div id="surprise" class="esquerra">
+            <h3>Lo sabias?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr</p>
           </div>
 
           <div id="idiomas" class="esquerra">
+            <p>Español(España) · Español  · Català  ·</p>
+            <p>English(US)  · Portugues(Brasil)</p>
           </div>
         </aside>
 
-          <div class="dreta">
+          <div id="estat" class="dreta">
+              <ul id="crear">
+                  <li id="publica"><img src"img/icones.png"> Crear Publicación</li>
+                  <li id="publica_foto">Foto/vídeo</li>
+                  <li id="publica_video">Vídeo en directo</li>
+                  <li id="publica_acontencimiento">Acontecimiento importante</li>
+              </ul>
+
+              <img id=mini_me src="img/photo.png"/>
+
+              <input id="pensament" type="test" placeholder="¿Qué estás pensando?">
+              </input>
+
+              <ul id="botonera_estat">
+                <li id="estat_fotovideo">Foto/Video</li>
+                <li id="estat_etiquetar">Etiquetar a</li>
+                <li id="estat_sentimiento">Sentimiento</li>
+                <li id="estat_mes">...</li>
+              </ul>
+          </div>
+
+
           </div>
 
           <div class="dreta">
