--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -69,7 +69,7 @@
             <h3>Fotos</h3>
               <ul>
                 <li>Foto 1</li>
-                <li>Foto 2</li>
+                <li id="block">Foto 2</li>
                 <li>Foto 3</li>
                 <li>Foto 4</li>
                 <li>Foto 5</li>
@@ -90,7 +90,7 @@
 
           <div id="estat" class="dreta">
               <ul id="crear">
-                  <li id="publica"><img src"img/icones.png"> Crear Publicación</li>
+                  <li id="publica"> Crear Publicación</li>
                   <li id="publica_foto">Foto/vídeo</li>
                   <li id="publica_video">Vídeo en directo</li>
                   <li id="publica_acontencimiento">Acontecimiento importante</li>
@@ -103,7 +103,7 @@
 
               <ul id="botonera_estat">
                 <li id="estat_fotovideo">Foto/Video</li>
-                <li id="estat_etiquetar">Etiquetar a</li>
+                <li id="estat_etiquetar">Etiquetar a.</li>
                 <li id="estat_sentimiento">Sentimiento</li>
                 <li id="estat_mes">...</li>
               </ul>
@@ -113,6 +113,16 @@
           </div>
 
           <div class="dreta">
+            <span style="color: pink;">Oriol Paricio Jordi Mora</span>
+              <h5 id="diamesany">31 de gener de 2019</h5>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam repudiandae deserunt quaerat voluptate iste vero nulla sit, illo debitis dolore, eaque accusantium quia sint esse consequuntur vitae libero qui voluptatibus.</p>
+                  <h6>A la Princeso li agrada</h6>
+                    <ul class="">
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+
           </div>
 
           <div class="dreta">
