--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -112,16 +112,17 @@
 
           </div>
 
-          <div class="dreta">
-            <span style="color: pink;">Oriol Paricio Jordi Mora</span>
-              <h5 id="diamesany">31 de gener de 2019</h5>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam repudiandae deserunt quaerat voluptate iste vero nulla sit, illo debitis dolore, eaque accusantium quia sint esse consequuntur vitae libero qui voluptatibus.</p>
-                  <h6>A la Princeso li agrada</h6>
-                    <ul class="">
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                    </ul>
+          <div class="dreta" id="entrada1">
+            <img id=comentari src="img/photo.png"/>
+              <span style="color: blue;">Oriol Paricio Jordi Mora</span>
+                <h5 id="diamesany">31 de gener de 2019</h5>
+                  <p>I’d shoot for the moon but I’m too busy gazing at stars.</p>
+                    <h6>A la Princeso li agrada</h6>
+                      <ul class="likes">
+                        <li id="magrada">Me Gusta</li>
+                        <li id="comenta">Comentar</li>
+                        <li id="compartir">Compartir</li>
+                      </ul>
 
           </div>
 
