--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, inicial-scale.0, user-scalable=no">
     <title>I Stay Flexing</title>
     <link rel="stylesheet" type="text/css" href="facebook_w.css" media="screen">
     <link rel="stylesheet" type="text/css" href="facebook_p.css" media="print">
