--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -114,7 +114,7 @@
 
           </div>
 
-          <div class="dreta" id="entrada1">
+          <div id="entrada1" class="dreta">
             <img id=comentari src="img/photo.png"/>
               <span id="noms">Oriol Paricio > Jordi Mora</span>
                 <h5 id="diamesany">31 de gener de 2019</h5>
