--- a/UF1/s2m8uf104_facebook/facebook.html
+++ b/UF1/s2m8uf104_facebook/facebook.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inicial-scale.0, user-scalable=no">
-    <title>I Stay Flexing</title>
+    <title>Perfil de Augustine</title>
     <link rel="stylesheet" type="text/css" href="facebook_w.css" media="screen">
     <link rel="stylesheet" type="text/css" href="facebook_p.css" media="print">
   </head>
@@ -118,8 +118,8 @@
             <img id=comentari src="img/photo.png"/>
               <span id="noms">Oriol Paricio > Jordi Mora</span>
                 <h5 id="diamesany">31 de gener de 2019</h5>
-                  <p>I’d shoot for the moon but I’m too busy gazing at stars.</p>
-                    <h6>A la Princeso li agrada</h6>
+                  <p>So I solemnly swear to always treat this roof, like my daughters and raise it. I'd shoot for the moon but I'm too busy gazin' at stars, I feel amazing and I'm not</p>
+                  <h6>A la Princeso li agrada</h6>
                       <ul class="likes">
                         <li id="magrada">Me Gusta</li>
                         <li id="comenta">Comentar</li>
@@ -129,6 +129,24 @@
             <input id="coment" type="test" placeholder="Escribe un comentario...">
             </input>
           </div>
+
+          <div id="entrada2" class="dreta">
+            <img id=comentari src="img/photo.png"/>
+              <span id="noms">Oriol Paricio > Jordi Mora</span>
+                <h5 id="diamesany">31 de gener de 2019</h5>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/LunHybOKIjU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h6>A la Princeso li agrada</h6>
+                    <ul class="likes">
+                      <li id="magrada">Me Gusta</li>
+                      <li id="comenta">Comentar</li>
+                      <li id="compartir">Compartir</li>
+                    </ul>
+                <img id=coment_foto src="img/photo.png"/>
+                <input id="coment" type="test" placeholder="Escribe un comentario...">
+                </input>
+          </div>
+
+
 
       </div>
     </div>
