--- a/audioplayer/barra.html
+++ b/audioplayer/barra.html
@@ -5,9 +5,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" sizes="192x192" href="img/icon.jpg">
-    <link rel="icon" sizes="512x512" href="img/icon.jpg">
-    <link rel="apple-touch-icon" sizes="192x192" href="img/icon.jpg">
+    <link rel="icon" sizes="192x192" href="img/icon.png">
+    <link rel="icon" sizes="512x512" href="img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="img/icon.png">
     <title>Document</title>
       <style>
         body {
