--- a/APP_teachme/Chat.html
+++ b/APP_teachme/Chat.html
@@ -14,14 +14,6 @@
 
     <div class="container">
       <div class="chatbox">
-          <div class="icons">
-            <i class="fas fa-phone"></i>
-            <i class="fas fa-video"></i>
-          </div>
-          <div class="menu">
-            <div class="dots"></div>
-          </div>
-        </div>
         <div class="middle">
           <div class="voldemort">
 
@@ -32,13 +24,18 @@
 
             <div class="outgoing">
               <div class="bubble lower">Call me on my phon</div>
-              <div class="bubble">Barcelona 3 Liverpool 0 que tu estas diceindo</div>
+              <div class="bubble">Am i going to burn in hell for all the things i did?</div>
+            </div>
+
+            <div class="incoming">
+              <div class="bubble">Hola, que tal. me llamo manue de madrid</div>
+              <div class="bubble">Como te va la vida</div>
             </div>
 
         </div>
         <div class="bottom-bar">
           <div class="chat">
-            <input type="text" placeholder="Type a message..." />
+            <input type="text" placeholder="Type a message..."></input>
           </div>
         </div>
       </div>
