--- a/APP_teachme/html/Recover.html
+++ b/APP_teachme/html/Recover.html
@@ -11,10 +11,9 @@
     <h1>Recupera </br>la teva contrasenya</h1>
 
     <form>
-      <input class="box" type="text" placeholder="Correu Electrònic"></input>
+      <input class="box" type="email" placeholder="Correu Electrònic"></input>
     </form>
-    <a href="Roll.html"><div id="recover" type="submit" >Restablir</div></a>
-    <p>Inicia Sessió</p>
+    <a href="login.html"><div id="recover" type="submit" >Restablir</div></a>
 
     <script>
         (document).ready(function()
