--- a/CodigoApp/html/home.html
+++ b/CodigoApp/html/home.html
@@ -25,7 +25,7 @@
             <h1>Elver Galarga</h1>
             <a href="home.html"><li>Home</li></a>
             <a href="Perfil.html"><li>Perfil</li></a>
-            <a href="Xat.html"><li>Xat</li></a>
+            <a href="xat.html"><li>Xat</li></a>
             <a href="Configuracion"><li>Configuració</li></a>
             <a href="Login.html"><li>Desconectar</li></a>
           </ul>
