--- a/CodigoApp/html/Login.html
+++ b/CodigoApp/html/Login.html
@@ -8,7 +8,11 @@
     <title></title>
   </head>
   <body>
+
+    <img id="fondo" src="../img/fondo.png" />
     <a href="signup.html"><div id="register">Registra't</div></a>
+    <img id="logotm" src="../img/logotm.png"/>
+    <h1 id="nom">Teachme</h1>
 
     <form>
       <input class="box" type="text" placeholder="User"></input>
@@ -16,8 +20,8 @@
     </form>
     <a href="Roll.html"><div id="sessio" type="submit">Inicia</div></a>
 
-    <h3>
-has oblidat la teva contrasenya?</h3>
+    <a href="../html/recover.html"><h3>
+  has oblidat la teva contrasenya?</h3></a>
 
   </body>
 </html>
