--- a/CodigoApp/html/contactos.html
+++ b/CodigoApp/html/contactos.html
@@ -9,99 +9,102 @@
   </head>
   <body>
 
+
+
     <div id="barra">
+      <a href="home.html"><img src="../img/flecha_atras.png" id="atras"> </a>
       <h1>Contactos</h1>
     </div>
 
   <div id="contingut">
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
         <h3>Jose Ferrer</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
-    <div id="contacts">
+    <a href="../html/xat.html"><div id="contacts">
       <div class="nom">
         <img src="../img/pic2.jpg" />
-        <h3>Manuel Ferrer</h3>
+        <h3>Maria Noboa</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Ana Paris</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic2.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Francisco Palacio</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic2.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Luna</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Pilar</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic2.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Javier Lacer</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Daniel Pardo</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic2.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Amalia Abasto</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
     <div id="contacts">
-      <div class="nom">
+      <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
-        <h3>Jose Manuel Ferrer</h3>
+        <h3>Jimena Beldad</h3>
         <p>Hola, como te va?</p>
         <div id="online"> </div>
-      </div>
+      </div></a>
     </div>
 
 
