--- a/CodigoApp/html/home.html
+++ b/CodigoApp/html/home.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/home.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Nunito"
+    <link href="https://fonts.googleapis.com/css?family=Nunito">
     <title></title>
   </head>
   <body>
 
     <div id="nav">
       <nav role="navigation">
+        <h3>Inici</h3>
         <div id="menuToggle">
 
           <input type="checkbox" />
@@ -25,18 +26,31 @@
             <h1>Elver Galarga</h1>
             <a href="home.html"><li>Home</li></a>
             <a href="Perfil.html"><li>Perfil</li></a>
-            <a href="xat.html"><li>Xat</li></a>
-            <a href="Configuracion"><li>Configuració</li></a>
+            <a href="tips.html"><li>Tips</li></a>
+            <a href="contactos.html"><li>Xat</li></a>
+            <a href="ajustes.html"><li>Configuració</li></a>
+            <a href="ajuda.html"><li>Ajuda</li></a>
             <a href="Login.html"><li>Desconectar</li></a>
           </ul>
         </div>
       </nav>
     </div>
+
     <div class="contenedor" id="post1">
-      <h2>Lorem Ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>Professor d'història</br> de l'art</h2>
+      <p>Troba el millor professor especialitzat en la història de l'art</p>
     </div>
-    <div class="contenedor"></div>
+
+    <div class="contenedor" id="post2">
+      <h2>Professors de </br>Creative Cloud</h2>
+      <p>Troba un professor amb coneixements sobre el paquet de Adobe per ajudar-vos a crear els vostres dissenys i editar les vostres imatges</p>
+    </div>
+
+    <div class="contenedor" id="post3">
+      <h2>Professor</br> d'anglès</h2>
+      <p>El millor professor d’anglès us està esperant a Teachme</p>
+    </div>
+
 
   </body>
 </html>
